# one_ml

./: README.md  housing.ipynb  main.py  mnist.ipynb  pyproject.toml
