[tool.poetry]
name = "one-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
kaggle = "^1.6.17"
kagglehub = "^0.3.4"
scikit-learn = "^1.5.2"
jupyter = "^1.1.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
